# ChangeLog for x11-misc/fbpanel
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/fbpanel/ChangeLog,v 1.16 2004/10/01 12:35:19 pyrania Exp $

  01 Oct 2004; <pyrania@gentoo.org> fbpanel-3.8-r1.ebuild,
  fbpanel-3.8.ebuild:
  Marked stable on x86.

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  fbpanel-3.8-r1.ebuild, fbpanel-3.8.ebuild:
  Masked fbpanel-3.8.ebuild testing for ppc

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  fbpanel-3.8-r1.ebuild:
  Masked fbpanel-3.8-r1.ebuild testing for ppc

  17 Aug 2004; Aron Griffis <agriffis@gentoo.org> fbpanel-3.8-r1.ebuild:
  add ~alpha #60071

  13 Aug 2004; Tom Martin <slarti@gentoo.org> fbpanel-3.8-r1.ebuild:
  Marked ~amd64.

*fbpanel-3.8-r1 (08 Jun 2004)

  08 Jun 2004; Ciaran McCreesh <ciaranm@gentoo.org> +fbpanel-3.8-r1.ebuild:
  Fix the default config settings, bug #53248

*fbpanel-3.8 (03 Jun 2004)

  03 Jun 2004; Brandon Hale <tseng@gentoo.org> +fbpanel-3.8.ebuild:
  Version bump, closes #52878.

  03 Jun 2004; Brandon Hale <tseng@gentoo.org> -fbpanel-1.0.ebuild,
  -fbpanel-2.2.ebuild:
  Clean up the old.

  03 Jun 2004; Brandon Hale <tseng@gentoo.org> fbpanel-3.5.ebuild:
  Stable on x86.

  06 May 2004; Brandon Hale <tseng@gentoo.org> fbpanel-1.0.ebuild,
  fbpanel-2.2.ebuild:
  Fix explicit RDEPEND

  28 Apr 2004; David Holm <dholm@gentoo.org> fbpanel-3.5.ebuild:
  Added to ~ppc.

*fbpanel-3.5 (27 Apr 2004)

  27 Apr 2004; Brandon Hale <tseng@gentoo.org> +fbpanel-3.5.ebuild:
  Version bump, closes bug #47645.

  04 Dec 2003; Brandon Hale <tseng@gentoo.org> fbpanel-1.0.ebuild,
  fbpanel-2.2.ebuild:
  fixing bad DEPEND

  30 Oct 2003; Brandon Hale <tseng@gentoo.org> metadata.xml:
  Added metadata.xml

*fbpanel-2.2 (21 Oct 2003)

  21 Oct 2003; Markus Nigbur <pyrania@gentoo.org> fbpanel-1.0.ebuild,
  fbpanel-2.2.ebuild:
  Version bump.

*fbpanel-1.0 (19 Jun 2003)
