@@ -1,6 +1,11 @@
 # ChangeLog for x11-misc/fbpanel
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/fbpanel/ChangeLog,v 1.16 2004/10/01 12:35:19 pyrania Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/fbpanel/ChangeLog,v 1.17 2004/11/07 19:59:32 pyrania Exp $
+
+*fbpanel-3.16 (07 Nov 2004)
+
+  07 Nov 2004; <pyrania@gentoo.org> +fbpanel-3.16.ebuild:
+  Version bump.
 
   01 Oct 2004; <pyrania@gentoo.org> fbpanel-3.8-r1.ebuild,
   fbpanel-3.8.ebuild:
